welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:63: error: ';' expected but ',' found.
  recule(2), gauche(), recule(2), droite()
           ^